# concert

./: config.py  forms.py  main.py  pyproject.toml
instance/: concert.db
static/css/: styles.css
templates/: check.html  footer.html  header.html  index.html  intermediate.html  shopping.html  ticket.html
